Trying to fix header on safari. changed webkit variable

--- a/public/stylesheets/stylish-portfolio.css
+++ b/public/stylesheets/stylish-portfolio.css
@@ -245,6 +245,7 @@ hr.small {
     top: 0px;
     color: white;
     z-index: 2;
+    -webkit-transform: translate3d(0,0,0);
 }
 
 
